--- a/conf/tsol.yaml
+++ b/conf/tsol.yaml
@@ -23,9 +23,10 @@ metrics.path: "reports"
 # topology configurations
 topology.workers: 1
 topology.acker.executors: 1
-topology.max.spout.pending: 1000000
-topology.name: "SOL"
+topology.max.spout.pending: 400
+topology.name: "TSOL"
 topology.level: 2
 message.size: 200
 component.spout_num: 16
 component.bolt_num: 32
+batch.size: 100
