--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   <name>storm-benchmark</name>
 
   <properties>
-    <storm.version>0.9.3</storm.version>
+    <storm.version>0.10.0-beta1</storm.version>
   </properties>
   <dependencies>
     <dependency>
@@ -35,6 +35,16 @@
       <artifactId>storm-core</artifactId>
       <version>${storm.version}</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.storm</groupId>
+      <artifactId>storm-hbase</artifactId>
+      <version>${storm.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.storm</groupId>
+      <artifactId>storm-hdfs</artifactId>
+      <version>${storm.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.storm</groupId>
@@ -54,7 +64,7 @@
     <dependency>
       <groupId>org.apache.kafka</groupId>
       <artifactId>kafka_2.9.2</artifactId>
-      <version>0.8.1.1</version>
+      <version>0.8.2.1</version>
       <exclusions>
         <exclusion>
           <groupId>org.apache.zookeeper</groupId>
@@ -95,6 +105,80 @@
       <version>2.0M10</version>
       <scope>test</scope>
     </dependency>
+
+    <!--<dependency>-->
+      <!--<groupId>org.anarres.lzo</groupId>-->
+      <!--<artifactId>lzo-hadoop</artifactId>-->
+      <!--<version>1.0.0</version>-->
+      <!--<exclusions>-->
+        <!--<exclusion>-->
+          <!--<groupId>log4j</groupId>-->
+          <!--<artifactId>log4j</artifactId>-->
+        <!--</exclusion>-->
+        <!--<exclusion>-->
+          <!--<groupId>org.slf4j</groupId>-->
+          <!--<artifactId>slf4j-log4j12</artifactId>-->
+        <!--</exclusion>-->
+      <!--</exclusions>-->
+    <!--</dependency>-->
+
+    <!--<dependency>-->
+      <!--<groupId>com.yammer.metrics</groupId>-->
+      <!--<artifactId>metrics-core</artifactId>-->
+      <!--<version>2.2.0</version>-->
+    <!--</dependency>-->
+
+    <!--<dependency>-->
+      <!--<groupId>org.apache.hadoop</groupId>-->
+      <!--<artifactId>hadoop-common</artifactId>-->
+      <!--<version>2.7.1</version>-->
+      <!--<type>jar</type>-->
+        <!--<exclusions>-->
+            <!--<exclusion>-->
+                <!--<groupId>log4j</groupId>-->
+                <!--<artifactId>log4j</artifactId>-->
+            <!--</exclusion>-->
+            <!--<exclusion>-->
+                <!--<groupId>org.slf4j</groupId>-->
+                <!--<artifactId>slf4j-log4j12</artifactId>-->
+            <!--</exclusion>-->
+        <!--</exclusions>-->
+    <!--</dependency>-->
+
+    <!--<dependency>-->
+      <!--<groupId>org.apache.hadoop</groupId>-->
+      <!--<artifactId>hadoop-hdfs</artifactId>-->
+      <!--<version>2.7.1</version>-->
+      <!--<type>jar</type>-->
+      <!--<exclusions>-->
+        <!--<exclusion>-->
+          <!--<groupId>log4j</groupId>-->
+          <!--<artifactId>log4j</artifactId>-->
+        <!--</exclusion>-->
+        <!--<exclusion>-->
+          <!--<groupId>org.slf4j</groupId>-->
+          <!--<artifactId>slf4j-log4j12</artifactId>-->
+        <!--</exclusion>-->
+      <!--</exclusions>-->
+    <!--</dependency>-->
+
+    <!--<dependency>-->
+      <!--<groupId>org.apache.hadoop</groupId>-->
+      <!--<artifactId>hadoop-core</artifactId>-->
+      <!--<version>2.7.1</version>-->
+      <!--<type>jar</type>-->
+      <!--<exclusions>-->
+        <!--<exclusion>-->
+          <!--<groupId>log4j</groupId>-->
+          <!--<artifactId>log4j</artifactId>-->
+        <!--</exclusion>-->
+        <!--<exclusion>-->
+          <!--<groupId>org.slf4j</groupId>-->
+          <!--<artifactId>slf4j-log4j12</artifactId>-->
+        <!--</exclusion>-->
+      <!--</exclusions>-->
+    <!--</dependency>-->
+
   </dependencies>
   <build>
     <resources>
@@ -104,7 +188,35 @@
       </resource>
     </resources>
     <plugins>
-      <plugin>
+
+    <!--<plugin>-->
+      <!--<groupId>org.apache.maven.plugins</groupId>-->
+      <!--<artifactId>maven-shade-plugin</artifactId>-->
+      <!--<version>1.4</version>-->
+      <!--<configuration>-->
+          <!--<createDependencyReducedPom>true</createDependencyReducedPom>-->
+      <!--</configuration>-->
+      <!--<executions>-->
+          <!--<execution>-->
+              <!--<phase>package</phase>-->
+              <!--<goals>-->
+                  <!--<goal>shade</goal>-->
+              <!--</goals>-->
+              <!--<configuration>-->
+                  <!--<transformers>-->
+                      <!--<transformer-->
+                              <!--implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>-->
+                      <!--<transformer-->
+                              <!--implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
+                          <!--<mainClass></mainClass>-->
+                      <!--</transformer>-->
+                  <!--</transformers>-->
+              <!--</configuration>-->
+          <!--</execution>-->
+      <!--</executions>-->
+    <!--</plugin>-->
+
+       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>2.2.2</version>
         <configuration>
