--- a/pom.xml
+++ b/pom.xml
@@ -189,34 +189,32 @@
     </resources>
     <plugins>
 
-    <!--<plugin>-->
-      <!--<groupId>org.apache.maven.plugins</groupId>-->
-      <!--<artifactId>maven-shade-plugin</artifactId>-->
-      <!--<version>1.4</version>-->
-      <!--<configuration>-->
-          <!--<createDependencyReducedPom>true</createDependencyReducedPom>-->
-      <!--</configuration>-->
-      <!--<executions>-->
-          <!--<execution>-->
-              <!--<phase>package</phase>-->
-              <!--<goals>-->
-                  <!--<goal>shade</goal>-->
-              <!--</goals>-->
-              <!--<configuration>-->
-                  <!--<transformers>-->
-                      <!--<transformer-->
-                              <!--implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>-->
-                      <!--<transformer-->
-                              <!--implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
-                          <!--<mainClass></mainClass>-->
-                      <!--</transformer>-->
-                  <!--</transformers>-->
-              <!--</configuration>-->
-          <!--</execution>-->
-      <!--</executions>-->
-    <!--</plugin>-->
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-shade-plugin</artifactId>
+      <version>1.4</version>
+      <configuration>
+          <createDependencyReducedPom>true</createDependencyReducedPom>
+      </configuration>
+      <executions>
+          <execution>
+              <phase>package</phase>
+              <goals>
+                  <goal>shade</goal>
+              </goals>
+              <configuration>
+                  <transformers>
+                      <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                      <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                          <mainClass></mainClass>
+                      </transformer>
+                  </transformers>
+              </configuration>
+          </execution>
+      </executions>
+    </plugin>
 
-       <plugin>
+      <!-- <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>2.2.2</version>
         <configuration>
@@ -238,7 +236,7 @@
             </goals>
           </execution>
         </executions>
-      </plugin>
+      </plugin> -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
