Adding sample_perf_kafka_topic as kafka.topic

--- a/conf/solhbase.conf
+++ b/conf/solhbase.conf
@@ -32,7 +32,7 @@ topology.name: "SOLHBase"
 message.size: 1024
 component.spout_num: 1
 component.bolt_num: 1
-kafka.topic : "SOLHDFS_100_20000000_4"
+kafka.topic : "sample_perf_kafka_topic"
 storm.zookeeper.servers : [ "cn070.l42scl.hortonworks.com", "cn035.l42scl.hortonworks.com", "cn069.l42scl.hortonworks.com"]
 worker.childopts: "-Xmx8g"
 
