--- a/conf/solhdfs.conf
+++ b/conf/solhdfs.conf
@@ -29,7 +29,7 @@ message.size: 1024
 component.spout_num: 1
 component.bolt_num: 1
 component.syncCount: 10000
-kafka.topic : "parts_1_100b"
+kafka.topic : "sample_perf_kafka_topic"
 storm.zookeeper.servers : [ "cn070.l42scl.hortonworks.com", "cn035.l42scl.hortonworks.com", "cn069.l42scl.hortonworks.com"]
 worker.childopts: "-Xmx8g"
 
