--- a/conf/tsolhbase.conf
+++ b/conf/tsolhbase.conf
@@ -37,7 +37,7 @@ batch.size: 10485760
 worker.childopts: "-Xmx8g"
 storm.zookeeper.servers : [ "cn070.l42scl.hortonworks.com", "cn035.l42scl.hortonworks.com", "cn069.l42scl.hortonworks.com"]
 zookeeper.host : "cn069.l42scl.hortonworks.com"
-kafka.topic: "parts_4_1k"
+kafka.topic: "sample_perf_kafka_topic"
 topology.shuffle: 1
 zookeeper.znode.parent : "/hbase-unsecure"
 
