--- a/conf/tsolhdfs.conf
+++ b/conf/tsolhdfs.conf
@@ -31,7 +31,7 @@ component.bolt_num: 1
 batch.size: 524288000
 worker.childopts: "-Xmx8g"
 storm.zookeeper.servers : [ "cn070.l42scl.hortonworks.com", "cn035.l42scl.hortonworks.com", "cn069.l42scl.hortonworks.com"] 
-kafka.topic : "parts_4_1k"
+kafka.topic : "sample_perf_kafka_topic"
 topology.shuffle : 0
 
 zookeeper.host : "cn069.l42scl.hortonworks.com"
