--- a/conf/storm.yaml
+++ b/conf/storm.yaml
@@ -8,9 +8,9 @@ storm.zookeeper.root: "/stormperf3"
 
 supervisor.slots.ports:
      - 7700
-     - 7701
-     - 7702
-     - 7703
+#     - 7701
+#     - 7702
+#     - 7703
 #     - 7704
 
 ui.port: 8723
@@ -23,3 +23,7 @@ storm.messaging.netty.buffer_size: 5242880
 storm.messaging.netty.max_retries: 100
 storm.messaging.netty.max_wait_ms: 1000
 storm.messaging.netty.min_wait_ms: 100
+topology.trident.batch.emit.interval.millis: 0
+topology.disruptor.batch.size: 10000
+topology.worker.max.heap.size.mb : 8192
+worker.max.heap.size.mb : 8192
