--- a/conf/tsol.yaml
+++ b/conf/tsol.yaml
@@ -1,19 +1,3 @@
-# Licensed to the Apache Software Foundation (ASF) under one
-# or more contributor license agreements.  See the NOTICE file
-# distributed with this work for additional information
-# regarding copyright ownership.  The ASF licenses this file
-# to you under the Apache License, Version 2.0 (the
-# "License"); you may not use this file except in compliance
-# with the License.  You may obtain a copy of the License at
-#
-# http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
 # metrics configurations
 metrics.enabled: true
 metrics.poll: 60000 # 60 secs
@@ -23,10 +7,13 @@ metrics.path: "reports"
 # topology configurations
 topology.workers: 1
 topology.acker.executors: 1
-topology.max.spout.pending: 400
+topology.max.spout.pending: 5000
 topology.name: "TSOL"
 topology.level: 2
-message.size: 200
-component.spout_num: 16
-component.bolt_num: 32
+message.size: 500
+component.spout_num: 1
+component.bolt_num: 1
 batch.size: 100
+topology.trident.batch.emit.interval.millis: 1
+# topology.disruptor.batch.size: 10000
+# topology.worker.childopts: " -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005 "
