--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
       <groupId>org.apache.storm</groupId>
       <artifactId>storm-core</artifactId>
       <version>${storm.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
     <groupId>com.esotericsoftware</groupId>
@@ -257,8 +258,8 @@
         <version>3.0</version>
         <configuration>
           <fork>true</fork>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
       <plugin>
